--- a/package.json
+++ b/package.json
@@ -4,19 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "runDev": "nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "nodemon --ignore 'data/*' --ignore 'logs/*' server.js",
+    "test": "jest",
+    "audit": "npm audit fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.15",
-    "shortid": "^2.2.16"
+    "dotenv": "16.3.1",
+    "ejs": "^3.1.10",
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
+    "express-rate-limit": "7.1.3",
+    "express-session": "^1.18.1",
+    "mongoose": "7.6.3",
+    "nanoid": "3.3.7",
+    "valid-url": "1.0.9",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/jest": "29.5.6",
+    "jest": "29.7.0",
+    "nodemon": "3.0.1",
+    "supertest": "6.3.3"
+  },
+  "overrides": {
+    "glob": "10.3.10",
+    "inflight": "2.0.0",
+    "superagent": "9.0.0"
+  },
+  "engines": {
+    "node": ">=14.18.0",
+    "npm": ">=6.14.0"
   }
 }
