--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "urls",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "dev": "nodemon --ignore 'data/*' --ignore 'logs/*' server.js",
     "test": "jest",
-    "audit": "npm audit fix",
-    "migrate-owner": "node run/migrate-owner.js"
+    "audit": "npm audit fix"
   },
   "author": "",
   "license": "ISC",
