--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "urls",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^6.0.0",
     "dotenv": "16.3.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
